# datagovmy-mcp

./: .gitignore  .npmignore  LICENSE  README.md  cli.js  datasets-verified.json  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  verify-datasets.mjs
examples/: claude_desktop_config.json
python/: README.md  pyproject.toml
python/src/datagovmy_mcp/: __init__.py  client.py  server.py
src/: client.ts  datasets.json  index.ts
