[project]
name = "datagovmy-mcp"
version = "0.1.0"
description = "MCP server for Malaysian government open data APIs"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.1.2",
    "httpx>=0.27.0",
]

[project.scripts]
datagovmy-mcp = "datagovmy_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
